fixing extra space below Start & clock buttons in the taskbar

--- a/src/App.css
+++ b/src/App.css
@@ -454,8 +454,8 @@ nav ul li a p{
 }
 /* Update your existing image style */
 .image {
-  border: solid 5px #c3c3c3;
-  border-top: solid 20px #c3c3c3; /* Space for the title */
+  border-bottom: solid 5px #c3c3c3;
+  border-top: solid 21px #c3c3c3; /* Space for the title */
   outline: solid 1px black;
   position: relative;
 }
@@ -533,7 +533,7 @@ nav ul li a p{
   height: 30px;
   background: #c3c3c3;
   /* centers horizontally, too */
-  align-items: center;
+  align-items: stretch;
 
   border-top: 1px solid #ffffff;
   border-left: 1px solid #ffffff;
@@ -544,12 +544,11 @@ nav ul li a p{
 .start-button {
   color: black;
   font-size: 18px;
-  height: 100%;
+  height: 106%;
   display: flex;
   /* aligns horizontally */
   align-items: center;
   padding: 0 10px;
-  border: none;
   background-color: #c3c3c3;
   border-right: 1px solid #808080;
   border-bottom: 1px solid #808080;
@@ -595,9 +594,10 @@ nav ul li a p{
     inset 1px 1px 0 #dfdfdf;
 }
 .clock {
+  height: 103%;
+  margin-bottom: -1px;
   margin-left: auto;
   padding: 0 8px;
-  height: 100%;
   display: flex;
   color: black;
   align-items: center;
@@ -612,6 +612,7 @@ nav ul li a p{
     inset -1px -1px 0 #000,
     inset 1px 1px 0 #dfdfdf;
 }
+
 
 
 
